--- a/config/settings.yml
+++ b/config/settings.yml
@@ -5,3 +5,4 @@ api:
     parameters_error: "Something wrong with data that we get from you. Please try again."
     email_not_unique: "Selected email already used. Please change another email or try to sign in."
     ad_ident_not_unique: "Current device already enrolled."
+    image_processing_failed: "Something wrong with processing of you photo, please try another"
