--- a/config/settings.yml
+++ b/config/settings.yml
@@ -6,3 +6,4 @@ api:
     email_not_unique: "Selected email already used. Please change another email or try to sign in."
     ad_ident_not_unique: "Current device already enrolled."
     image_processing_failed: "Something wrong with processing of you photo, please try another"
+    device_not_found: "Device with current token not found. Please try enroll again."
